--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
   <p>bacon, bacon, bacon, bacon, bacon, bacon</p>
   <img class="bacon" src="https://emojipedia-us.s3.amazonaws.com/thumbs/240/apple/118/bacon_1f953.png" alt="bacon-img">
   <img class="broccoli circular" src="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/120/apple/325/broccoli_1f966.png" alt="broccoli-img">
+  <meta name="description" content="Used auto parts for sale">
+
+  <meta name="keywords" content="fuel filters, brake discs, belts" />
 </body>
 
 </html>
