--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
   <meta charset="utf-8">
   <title>Bacon Fansite</title>
     <link rel="stylesheet" href="css/styles.css">
-    <meta name="description" content="Used auto parts for sale">
+    <meta name="description" content="cabezadebambooooooooo1234567">
 
-    <meta name="keywords" content="fuel filters, brake discs, belts" />
+    <meta name="keywords" content="cabezadebambooooooooo1234567" />
 </head>
 
 <body>
